🐛 (publish-package.yml): Bug: Ajuste de dependencia do yml para publicação
Foi removido um job a mais que existia nas dependencias do 'package_to_npm' aonde estavam apontando para um job que não existia mais

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -28,7 +28,7 @@ jobs:
 
   publish_to_github:
     runs-on: "ubuntu-latest"
-    needs: get_package_version
+    needs: [get_package_version]
 
     steps:
       - name: Show last package version
@@ -54,7 +54,7 @@ jobs:
 
   publish_to_npm:
     runs-on: "ubuntu-latest"
-    needs: [get_package_version, publish_package_github]
+    needs: [get_package_version]
 
     steps:
       - name: Show last package version
