--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -37,6 +37,6 @@ jobs:
 
       - name: Create realease
         if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
-        run: gh release create $VERSION_PACKAGE -t "$VERSION_PACKAGE" -F ./.github/template/RELEASE.md --latest
+        run: gh release create $VERSION_PACKAGE -t "$VERSION_PACKAGE" -F ./.github/templates/RELEASE.md --latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
