--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -27,32 +27,6 @@ jobs:
           versionNumber="$(cat package.json | jq -r '.version')";
           echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_OUTPUT
 
-  publish_to_github:
-    runs-on: "ubuntu-latest"
-    needs: [get_package_version]
-
-    steps:
-      - name: Show last package version
-        run: echo "VERSION_PACKAGE="v${{ needs.get_package_version.outputs.version_package }} >> $GITHUB_ENV
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16.x"
-          registry-url: "https://npm.pkg.github.com/"
-
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install Dependences
-        run: npm ci
-
-      - name: Publish on Github
-        if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   publish_to_npm:
     runs-on: "ubuntu-latest"
     needs: [get_package_version]
@@ -69,6 +43,7 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
+          always-auth: true
 
       - name: Install Dependences
         run: npm ci
