--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "downgrade": "npm version 0.0.0",
     "log": "ts-node-esm ./scripts/generateLog.ts",
     "release": "ts-node-esm ./scripts/generateRelease.ts",
-    "update": "ts-node-esm ./scripts/updatePackage.ts && ts-node-esm ./scripts/generateRelease.ts && git add ./github/templates/RELEASE.md && git commit -m '(RELEASE.md)Docs: Incremento de versão na RELEASE\n\nNova versão disponivel no header'",
+    "update": "ts-node-esm ./scripts/updatePackage.ts && ts-node-esm ./scripts/generateRelease.ts && git add ./.github/templates/RELEASE.md && git commit -m '(RELEASE.md)Docs: Incremento de versão na RELEASE\n\nNova versão disponivel no header'",
     "commit": "ts-node-esm ./scripts/generateLog.ts && git add CHANGELOG.md && gitmoji -c",
-    "PR": "ts-node-esm ./scripts/generatePR.ts && git add ./github/PULL_REQUEST_TEMPLATE.md"
+    "PR": "ts-node-esm ./scripts/generatePR.ts && git add ./.github/PULL_REQUEST_TEMPLATE.md"
   },
   "dependencies": {
     "react": "^18.2.0",
