--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "1.0.1",
   "license": "MIT License",
   "description": "Validações e máscaras para seus dados, e o melhor, tudo em forma de Hooks!",
-  "types": "./src/types/globalTypes.d.ts",
-  "main": "./src/hooks",
+  "main": "./dist/my-lib.umd.js",
+  "module": "./dist/my-lib.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/my-lib.es.js",
+      "require": "./dist/my-lib.umd.js"
+    }
+  },
   "type": "module",
   "homepage": "https://github.com/MauMuller/react-valisk#readme",
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "react",
     "valisk",
@@ -45,6 +55,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-dts": "^1.7.1"
   }
 }
