--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "gitmoji-cli": "^7.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
