--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Install Dependences
         run: npm ci
 
+      - name: Build library
+        run: npm run build
+
       - name: Publish on NPM
         if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
         run: npm publish --access public
