✨ ((All files)): Criação de uma nova versão para a lib, agora, renovando completamente o conceito e a regra de negócios | REACT-HOOK-FORMS INTEGRATION...
Após começar a realização de vários testes com a biblioteca, percebi que ela não era uma boa opção para vários cenários atuais da programação, principalmente com a integração de outras bibliotecas, isso pois ela se limitada a ser um hook que renderizava toda vez que digitado. Por conta disso e com todos os testes, resolvi dar um tempo de realizar commmits, focando principalmente na funcionalidade, ou seja, refiz toda a biblioteca com uma ideia diferente do convencional. Agora, ela possui o poder de trabalhar com UNCONTROLLED e CONTROLLED, além de uma integração FOD* COM O REACT-HOOK-FORMS.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,10 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "scripts"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
