📝 (readme): Atualização dos casos de uso e Introdução
Apenas realizei mais exemplos para o caso de uso da biblioteca, atualizando todos os conceitos novamente, porém, só incluindo o a introdução por enquanto

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Mascaras UNCONTROLLED, CONTROLLED e integração com REACT-HOOK-FORMS",
   "main": "./dist/lib.umd.js",
   "module": "./dist/lib.es.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/lib/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/lib.es.js",
